Fixed alignments for mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -372,9 +372,9 @@ header:after {
   }
 }
 header #logo-container {
-  float: left;
+/*  float: left;*/
   display: block;
-  padding-left: 22em;
+/*  padding-left: 22em;*/
   padding-top: 2em;
   
 /*  margin-right: 2.35765%;
@@ -428,11 +428,11 @@ header nav:last-child {
 }
 @media screen and (max-width: 540px) {
   header nav {
-    text-align: left;
-    margin-top: 1em;
-    float: left;
+    text-align: center;
+/*    margin-top: 1em;
+    float: left;*/
     display: block;
-    margin-right: 7.42297%;
+/*    margin-right: 7.42297%;*/
     width: 100%;
   }
   header nav:last-child {
